# neural-market-regime-model

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  update-live-forecast.yml
.streamlit/: config.toml  secrets.toml.example
configs/: default.yaml
dashboard_data/: neural_walk_forward_backtest.csv
src/market_regime/: __init__.py  __main__.py  backtest.py  baseline.py  cli.py  config.py  dashboard.py  data.py  evaluation.py  experiment.py  features.py  forecast.py  neural_hmm.py  plotting.py  synthetic.py  training.py  walk_forward.py
tests/: test_backtest.py  test_baseline.py  test_cli.py  test_config.py  test_dashboard.py  test_evaluation.py  test_experiment.py  test_features.py  test_forecast.py  test_neural_hmm.py  test_synthetic.py  test_walk_forward.py
