[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-market-regime"
version = "0.1.0"
description = "Interpretable HMM market regimes with neural mixture-density emissions"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "hmmlearn>=0.3.3,<0.4",
  "joblib>=1.4,<2",
  "matplotlib>=3.9,<4",
  "numpy>=1.26,<2.5",
  "pandas>=2.2,<3",
  "PyYAML>=6.0,<7",
  "scikit-learn>=1.5,<2",
  "torch>=2.5,<3",
  "yfinance>=0.2.65,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[project.scripts]
market-regime = "market_regime.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
  "ignore:Could not find the number of physical cores:UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
